fix: atualiza cors para aceitar preflight options e headers do frontend